Added bootstrap styles to warning and button

--- a/assignments/Mod3/styles/styles.css
+++ b/assignments/Mod3/styles/styles.css
@@ -60,10 +60,7 @@ input[type="text"] {
   overflow: hidden;
 }
 
-.error {
-  color: red;
-  font-weight: bold;
-  float: left;
-  margin-left: 10px;
-  margin-top: 5px;
+.alert {
+  position: relative;
+  top: 50px;
 }
