--- a/assignments/Mod4/templates/categories-list.template.html
+++ b/assignments/Mod4/templates/categories-list.template.html
@@ -1,13 +1,13 @@
-<div class="container">
+<div class="container-fluid">
   <a ui-sref="home">
     <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
   </a>
   <div class="row">
-    <div class="col-md-6 col-sm-6">
+    <div class="col-lg-6 col-md-6 col-sm-6">
       <h2 class="bg-primary">Categories</h2>
       <categories categories="categoriesCtrl.categories"></categories>
     </div>
-    <div class="col-md-6 col-sm-6">
+    <div class="col-lg-6 col-md-6 col-sm-6">
       <ui-view></ui-view>
     </div>
   </div>
