--- a/assignments/Mod4/templates/items.template.html
+++ b/assignments/Mod4/templates/items.template.html
@@ -1,5 +1,5 @@
 <ul>
   <li ng-repeat="item in $ctrl.items">
-      {{ item.name }}
+      {{ item.name }} <span class="label label-warning">{{ item.price_small | currency }}</span> <span class="label label-danger">{{ item.price_large | currency }}</span>
   </li>
 </ul>
